test/tests/integration/helpers/success/verificationCode.js
const { successTestBuilder } = require("$/classes/SuccessTestBuilder");
const { testVariablesManager } = require("$/classes/TestVariablesManager");

const { models } = require("@/models");

const userModels = models.native.user;

const verificationCodeSuccessTest = (
  { testValue },
  { modelCheck = true } = testVariablesManager.successTestDefaultOptions
) => {
  successTestBuilder
    .create()
    .setVariables(userModels.verificationCode, "", testValue)
    .setOptions({ modelCheck })
    .typeCheck()
    .emptyCheck()
    .numericCheck()
    .lengthCheck()
    .run();
};

module.exports = {
  verificationCodeSuccessTest,
};
